--- a/Project3-WeatherJournalApp/package.json
+++ b/Project3-WeatherJournalApp/package.json
@@ -11,6 +11,11 @@
     "type": "git",
     "url": "https://github.com/AbdussamadYisau/Udacity-FrontEndNanodegree/tree/master/Project3-WeatherJournalApp"
   },
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1"
+  },
   "author": "Abdussamad Yisau",
   "license": "ISC"
 }
