--- a/Project4-EvaluateNewsNlp/package.json
+++ b/Project4-EvaluateNewsNlp/package.json
@@ -29,6 +29,7 @@
     "css-loader": "^3.6.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^26.1.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.1",
     "sass-loader": "^9.0.2",
     "style-loader": "^1.2.1",
